# QMI

./: .bumpreadme_min.cfg  .bumpreadme_rel.cfg  .bumpversion.cfg  .bumpversion_devel.cfg  .bumpversion_main.cfg  .bumpversion_main.toml  .bumpversion_release.cfg  .bumpversion_release.toml  .bumpversion_stable.cfg  .bumpversion_stable.toml  .bumpversion_switch.cfg  .bumpversion_switch.toml  .coveragerc  .gitignore  .readthedocs.yml  ACKNOWLEDGEMENTS.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  LICENSE.md  README.md  RELEASE.md  TESTING.md  mypy.ini  pylintrc  pyproject.toml  ruff.toml  setup.py
.github/: requirements-ci.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  issue_template.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/badges/: badges.txt
.github/workflows/: github-ci.yml  pull-request-ci.yml  pull_request.yml  push-ci.yml  pypi-publish.yml  python-publish.yml  reusable-ci-workflows.yml  schedule-full-ci-test-main.yml  scheduled-full-ci.yml
documentation/: adbasic_coding_standard.rst
documentation/sphinx/: README_DOCUMENTATION  make-docs.sh
documentation/sphinx/source/: api_reference.rst  coding_standard.rst  conf.py  design.rst  documenting_qmi.rst  index.rst  installation.rst  qmi_sphinx.py  troubleshooting.rst  tutorial.rst  welcome.rst
examples/calibration/: calibration_client.py  calibration_server.py  qmi.conf
examples/noisy-sine-generator/: noisy_sine_generator_client.py  noisy_sine_generator_controller.py  noisy_sine_generator_server.py  noisy_sine_generator_service.py  qmi.conf
examples/relay/: qmi.conf  relay_client.py  relay_server.py
qmi/: __init__.py
qmi/core/: __init__.py  config.py  config_defs.py  config_struct.py  context.py  context_singleton.py  exceptions.py  instrument.py  logging_init.py  messaging.py  object_registry.py  pubsub.py  read_keyboard.py  rpc.py  scpi_protocol.py  task.py  thread.py  transport.py  transport_gpib_visa.py  transport_usbtmc_pyusb.py  transport_usbtmc_visa.py  udp_responder_packets.py  usbtmc.py  util.py
qmi/data/: __init__.py  dataset.py  datastore.py  hdf5recorder.py
qmi/experimental/: README.md  example.py  power_meter.py
qmi/instruments/: __init__.py
qmi/instruments/adwin/: __init__.py  adwin.py  goldii.py  proii.py
qmi/instruments/agiltron/: __init__.py  _ff_optical_switch.py  ff1x4.py  ff1x8.py
qmi/instruments/anapico/: __init__.py  apsin.py
qmi/instruments/aviosys/: __init__.py  ippower.py
qmi/instruments/boston_micromachines/: __init__.py  multidm.py
qmi/instruments/bristol/: __init__.py  bristol_871a.py  fos.py
qmi/instruments/cobolt/: __init__.py  laser_06_01.py
qmi/instruments/digilent/: __init__.py  analog_discovery.py
qmi/instruments/dummy/: __init__.py  noisy_sine_generator.py
qmi/instruments/edwards/: __init__.py  turbo_instrument_controller.py
qmi/instruments/high_finesse/: __init__.py  wlm.py
qmi/instruments/imagine_eyes/: __init__.py  mirao52e.py
qmi/instruments/instru_tech/: __init__.py  instrutech_agc302.py
qmi/instruments/jpe/: __init__.py  cpsc.py
qmi/instruments/mcc/: __init__.py  usb1808x.py
qmi/instruments/montana/: __init__.py  cryostation.py  cryostation_s50.py
qmi/instruments/nenion/: __init__.py  valve_controller.py
qmi/instruments/newport/: __init__.py  actuators.py  ag_uc8.py  conex_cc.py  conex_cc_controller.py  newport_843r.py  newport_843r_libusb.py  single_axis_motion_controller.py  smc_100cc.py  smc_100pp.py  tlb670x.py  tlb670x_error_messages.py
qmi/instruments/nkt_photonics/: __init__.py  adjustik.py  boostik.py  nkt_photonics_interbus_protocol.py
qmi/instruments/ozoptics/: __init__.py  dd100mc.py  epc_driver.py
qmi/instruments/parallax/: __init__.py  usb_propeller.py
qmi/instruments/pi/: __init__.py  e873.py  gcs_error_codes.py
qmi/instruments/picoquant/: __init__.py  _hhlib_function_signatures.py  _library_wrapper.py  _picoquant.py  hydraharp.py  multiharp.py  picoharp.py
qmi/instruments/picotech/: __init__.py  _picoscope.py  picoscope3403.py  picoscope4824.py
qmi/instruments/pololu/: __init__.py  maestro.py  qmi_uart.py
qmi/instruments/ptgrey/: __init__.py  blackfly_aravis.py
qmi/instruments/quantum_composers/: __init__.py  pulse_generator9530.py
qmi/instruments/quantum_opus/: __init__.py  amp_sim_module.py
qmi/instruments/raspberry/: __init__.py  gpio.py
qmi/instruments/rigol/: __init__.py  dg4102.py
qmi/instruments/rohde_schwarz/: __init__.py  rs_base_signal_gen.py  sgs100a.py  smbv100a.py
qmi/instruments/santec/: __init__.py  tsl_570.py
qmi/instruments/siglent/: __init__.py  sds1202xe.py  ssa3000x.py
qmi/instruments/stanford_research_systems/: __init__.py  dc205.py  sim900.py  sim922.py
qmi/instruments/tektronix/: __init__.py  afg31000.py  awg5014.py  fca3000.py
qmi/instruments/tenma/: __init__.py  psu_72.py
qmi/tools/: __init__.py  proc.py  qmi_tool.py
qmi/utils/: __init__.py  adbasic_coding_standard.rst  adbasic_compiler.py  adbasic_parser.py  adwin_manager.py  context_managers.py
scripts/: run_analysis_cc.sh  run_analysis_mi.sh  run_analysis_pylint.sh  run_docs_sphinx.sh  run_unit_tests_with_coverage.sh
tests/: patcher.py
tests/core/: hw_test_transport_serial.py  pyvisa_stub.py  sw_test_qmi_signals_publish_script.py  sw_test_qmi_signals_receiver.py  test_basic.py  test_cleanup.py  test_config.py  test_config_struct.py  test_context.py  test_context_config_file_input.py  test_context_singleton_config_file_input.py  test_instrument.py  test_logging_init.py  test_messaging.py  test_multiple_contexts.py  test_pubsub.py  test_rpc.py  test_scpi_protocol.py  test_tasks.py  test_transport.py  test_transport_gpib.py  test_transport_gpib_visa.py  test_transport_usbtmc.py  test_unclean_shutdown.py  test_usbtmc.py
tests/data/: test_dataset.py  test_datastore.py  test_hdf5recorder.py
tests/instruments/: hw_test_yokogawa.py  test_boostik_driver.py
tests/tools/: _posixsubprocess_mock.py  test_proc.py
tests/utils/: test_adbasic_compiler.py  test_adbasic_parser.py  test_adwin_manager.py  test_context_managers.py  test_module.py
(+164 files in other folders)
